# web-task-14

./: docker-compose.yml  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
htmlcov/: d_145eef247bfb46b6_schemas_py.html  d_53606e9522d39d55_auth_py.html  d_53606e9522d39d55_contacts_py.html  d_53606e9522d39d55_users_py.html  d_57fdb4e82e728119_contacts_py.html  d_57fdb4e82e728119_users_py.html  d_67f6f9a13eff1831_auth_py.html  d_67f6f9a13eff1831_email_py.html  d_83bb46b0261c7dc5_config_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_route_auth_py.html  d_a44f0ac069e85531_test_unit_repository_contacts_py.html  d_a44f0ac069e85531_test_unit_repository_users_py.html  d_f1aa34bc7b1afc18_db_py.html  d_f1aa34bc7b1afc18_models_py.html  index.html  main_py.html  status.json
migrations/: env.py
migrations/versions/: 0b05d9ea1be5_auth.py  2fd36f192f26_init.py  b520545b2881_init.py  f6f9138cad01_auth_email.py  fbb20388e687_auth.py
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: test_unit_repository_contacts.py  test_unit_repository_users.py
